# SpinRender

./: .claude  .github  .gitignore  .vscode  CONTRIBUTING.md  LICENSE  NOTICES.md  README.md  TODO.md  diagnostic.py  install.bat  install.sh  install.sh.backup  metadata.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements-validate.txt  requirements_preview.txt
.githooks/: post-checkout
.reports/: codemap-diff.txt
SpinRender/: __init__.py  spinrender_plugin.py  version.py
SpinRender/core/: __init__.py  board_workspace.py  cache_warmer.py  locale.py  presets.py  preview.py  render_controller.py  renderer.py  self_update.py  settings.py  theme.py
SpinRender/foundation/: fonts.py  icons.py
SpinRender/ui/: __init__.py  controls_side_panel.py  custom_controls.py  dependencies.py  dialogs.py  (+12 more)
docs/: ARCHITECTURE_IMPLEMENTATION.md  COMPONENT_CONVENTIONS.md  DEPENDENCY_ANALYSIS.md  GUIDE_DEVELOPMENT_WORKFLOW.md  GUIDE_RELEASE_PROCESS.md  KICAD_CLI_RENDER_NOTES.md  MIGRATION_STRATEGY.md  PRD.md  PROJECT_PLAN.md  README.md  STRING_LOCALIZATION_AUDIT.md  TASK_7_1_ANALYSIS.md  TASK_PROGRAMMATIC_CASING.md  TDD_PLAN.md  THEME_SCHEMA.md  THEME_VALIDATION_GUIDE.md  UI_ANALYSIS.md  UI_REFACTOR_TASKLIST.md
examples/: README.md
res/: SpinRender.pen  render_gif.sh  render_vid.sh  testboard.glb
scripts/: check_version.py  orchestrate-ui-refactor.sh  run-parallel-agents.sh
test/: debug_matrix_parity.py
tests/: INDEX.md  conftest.py  test_environment.py  test_validate_theme_integration.py
tools/: INDEX.md  apply_skip_worktree.sh  validate_theme.py
(+93 files in other folders)
