[project]
name = "SpinRender"
version = "0.5.0-beta"
description = "KiCad plugin for generating animated PCB renders"
license = {text = "GPLv3"}
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0",
    "PyOpenGL>=3.1.0",
    "PyOpenGL-accelerate>=3.1.0",
    "trimesh>=4.0.0",
    "numpy>=1.24.0",
    "pyobjc-core; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=SpinRender",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "--tb=short",
]
